v1/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from d:\Bach Khoa\201\PPL\_AS1\v1\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'True'", 
                     "'False'", "'EndDo'", "'+'", "'+.'", "'-'", "'-.'", 
                     "'*'", "'*.'", "'\\'", "'\\.'", "'%'", "'!'", "'&&'", 
                     "'||'", "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", 
                     "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'", "'='", "'['", 
                     "']'", "'{'", "'}'", "'('", "')'", "':'", "';'", "'.'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "ID", "INT_LIT", "BOOLEAN_LIT", "FLOAT_LIT", 
                      "BODY", "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", 
                      "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "IF", "PARAMETER", "RETURN", "THEN", "VAR", "WHILE", 
                      "TRUE", "FALSE", "ENDDO", "ADDINT", "ADDFLOAT", "SUBINT", 
                      "SUBFLOAT", "MULINT", "MULFLOAT", "DIVINT", "DIVFLOAT", 
                      "MODINT", "NOT", "AND", "OR", "NOT_EQUALINT", "EQUALINT", 
                      "LTHANINT", "GTHANINT", "LEQUALINT", "GEQUALINT", 
                      "NOT_EQUALFLOAT", "LTHANFLOAT", "GTHANFLOAT", "LEQUALFLOAT", 
                      "GEQUALFLOAT", "ASSIGN", "LSB", "RSB", "LB", "RB", 
                      "LP", "RP", "COLON", "SEMI", "DOT", "COMMA", "COMMENT", 
                      "ARRAY_LIT", "INT", "INT_WITHOUT_0", "WS", "STRING_LIT", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declarations = 1
    RULE_var_decl = 2
    RULE_many_var_decl = 3
    RULE_one_var_decl = 4
    RULE_func_decl = 5
    RULE_func_name = 6
    RULE_para_decl = 7
    RULE_composit = 8
    RULE_scalar = 9
    RULE_stm_list = 10
    RULE_stm_type = 11
    RULE_assign_stm = 12
    RULE_if_stm = 13
    RULE_for_stm = 14
    RULE_while_stm = 15
    RULE_do_while_stm = 16
    RULE_break_stm = 17
    RULE_continue_stm = 18
    RULE_call_stm = 19
    RULE_return_stm = 20
    RULE_exp = 21
    RULE_exp1 = 22
    RULE_exp2 = 23
    RULE_exp3 = 24
    RULE_exp4 = 25
    RULE_exp5 = 26
    RULE_index_op = 27
    RULE_exp6 = 28
    RULE_func_call = 29
    RULE_list_argument = 30

    ruleNames =  [ "program", "declarations", "var_decl", "many_var_decl", 
                   "one_var_decl", "func_decl", "func_name", "para_decl", 
                   "composit", "scalar", "stm_list", "stm_type", "assign_stm", 
                   "if_stm", "for_stm", "while_stm", "do_while_stm", "break_stm", 
                   "continue_stm", "call_stm", "return_stm", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "index_op", "exp6", "func_call", 
                   "list_argument" ]

    EOF = Token.EOF
    ID=1
    INT_LIT=2
    BOOLEAN_LIT=3
    FLOAT_LIT=4
    BODY=5
    BREAK=6
    CONTINUE=7
    DO=8
    ELSE=9
    ELSEIF=10
    ENDBODY=11
    ENDIF=12
    ENDFOR=13
    ENDWHILE=14
    FOR=15
    FUNCTION=16
    IF=17
    PARAMETER=18
    RETURN=19
    THEN=20
    VAR=21
    WHILE=22
    TRUE=23
    FALSE=24
    ENDDO=25
    ADDINT=26
    ADDFLOAT=27
    SUBINT=28
    SUBFLOAT=29
    MULINT=30
    MULFLOAT=31
    DIVINT=32
    DIVFLOAT=33
    MODINT=34
    NOT=35
    AND=36
    OR=37
    NOT_EQUALINT=38
    EQUALINT=39
    LTHANINT=40
    GTHANINT=41
    LEQUALINT=42
    GEQUALINT=43
    NOT_EQUALFLOAT=44
    LTHANFLOAT=45
    GTHANFLOAT=46
    LEQUALFLOAT=47
    GEQUALFLOAT=48
    ASSIGN=49
    LSB=50
    RSB=51
    LB=52
    RB=53
    LP=54
    RP=55
    COLON=56
    SEMI=57
    DOT=58
    COMMA=59
    COMMENT=60
    ARRAY_LIT=61
    INT=62
    INT_WITHOUT_0=63
    WS=64
    STRING_LIT=65
    ILLEGAL_ESCAPE=66
    UNCLOSE_STRING=67
    UNTERMINATED_COMMENT=68
    ERROR_CHAR=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(BKITParser.DeclarationsContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.declarations()
            self.state = 63
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_declarations




    def declarations(self):

        localctx = BKITParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 65
                self.var_decl()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 71
                self.func_decl()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def many_var_decl(self):
            return self.getTypedRuleContext(BKITParser.Many_var_declContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(BKITParser.VAR)
            self.state = 78
            self.match(BKITParser.COLON)
            self.state = 79
            self.many_var_decl()
            self.state = 80
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.One_var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.One_var_declContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_many_var_decl




    def many_var_decl(self):

        localctx = BKITParser.Many_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_many_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.one_var_decl()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 83
                self.match(BKITParser.COMMA)
                self.state = 84
                self.one_var_decl()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class One_var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def BOOLEAN_LIT(self):
            return self.getToken(BKITParser.BOOLEAN_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def ARRAY_LIT(self):
            return self.getToken(BKITParser.ARRAY_LIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_one_var_decl




    def one_var_decl(self):

        localctx = BKITParser.One_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_one_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(BKITParser.ID)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 91
                self.match(BKITParser.LSB)

                self.state = 92
                self.match(BKITParser.INT_LIT)
                self.state = 93
                self.match(BKITParser.RSB)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 99
                self.match(BKITParser.ASSIGN)
                self.state = 100
                _la = self._input.LA(1)
                if not(((((_la - 2)) & ~0x3f) == 0 and ((1 << (_la - 2)) & ((1 << (BKITParser.INT_LIT - 2)) | (1 << (BKITParser.BOOLEAN_LIT - 2)) | (1 << (BKITParser.FLOAT_LIT - 2)) | (1 << (BKITParser.ARRAY_LIT - 2)) | (1 << (BKITParser.STRING_LIT - 2)))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def func_name(self):
            return self.getTypedRuleContext(BKITParser.Func_nameContext,0)


        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def stm_list(self):
            return self.getTypedRuleContext(BKITParser.Stm_listContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def para_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Para_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Para_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(BKITParser.FUNCTION)
            self.state = 104
            self.match(BKITParser.COLON)
            self.state = 105
            self.func_name()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.PARAMETER:
                self.state = 106
                self.para_decl()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(BKITParser.BODY)
            self.state = 113
            self.match(BKITParser.COLON)
            self.state = 114
            self.stm_list()
            self.state = 115
            self.match(BKITParser.ENDBODY)
            self.state = 116
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_name




    def func_name(self):

        localctx = BKITParser.Func_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def getRuleIndex(self):
            return BKITParser.RULE_para_decl




    def para_decl(self):

        localctx = BKITParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(BKITParser.PARAMETER)
            self.state = 121
            self.match(BKITParser.COLON)

            self.state = 122
            self.match(BKITParser.ID)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 123
                self.match(BKITParser.LSB)

                self.state = 124
                self.match(BKITParser.INT_LIT)
                self.state = 125
                self.match(BKITParser.RSB)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 131
                self.match(BKITParser.COMMA)

                self.state = 132
                self.match(BKITParser.ID)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.LSB:
                    self.state = 133
                    self.match(BKITParser.LSB)

                    self.state = 134
                    self.match(BKITParser.INT_LIT)
                    self.state = 135
                    self.match(BKITParser.RSB)
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompositContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INT_WITHOUT_0(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_WITHOUT_0)
            else:
                return self.getToken(BKITParser.INT_WITHOUT_0, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT)
            else:
                return self.getToken(BKITParser.INT, i)

        def getRuleIndex(self):
            return BKITParser.RULE_composit




    def composit(self):

        localctx = BKITParser.CompositContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_composit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(BKITParser.ID)
            self.state = 156 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 147
                self.match(BKITParser.LSB)
                self.state = 148
                self.match(BKITParser.INT_WITHOUT_0)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.INT:
                    self.state = 149
                    self.match(BKITParser.INT)
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 155
                self.match(BKITParser.RSB)
                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LSB):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_scalar




    def scalar(self):

        localctx = BKITParser.ScalarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_scalar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stm_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def stm_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Stm_typeContext)
            else:
                return self.getTypedRuleContext(BKITParser.Stm_typeContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_stm_list




    def stm_list(self):

        localctx = BKITParser.Stm_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stm_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 162
                self.var_decl()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 168
                    self.stm_type() 
                self.state = 173
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stm_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stm(self):
            return self.getTypedRuleContext(BKITParser.Assign_stmContext,0)


        def if_stm(self):
            return self.getTypedRuleContext(BKITParser.If_stmContext,0)


        def for_stm(self):
            return self.getTypedRuleContext(BKITParser.For_stmContext,0)


        def break_stm(self):
            return self.getTypedRuleContext(BKITParser.Break_stmContext,0)


        def continue_stm(self):
            return self.getTypedRuleContext(BKITParser.Continue_stmContext,0)


        def while_stm(self):
            return self.getTypedRuleContext(BKITParser.While_stmContext,0)


        def do_while_stm(self):
            return self.getTypedRuleContext(BKITParser.Do_while_stmContext,0)


        def call_stm(self):
            return self.getTypedRuleContext(BKITParser.Call_stmContext,0)


        def return_stm(self):
            return self.getTypedRuleContext(BKITParser.Return_stmContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stm_type




    def stm_type(self):

        localctx = BKITParser.Stm_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stm_type)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.assign_stm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.if_stm()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.for_stm()
                self.state = 179
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.BREAK]:
                    self.state = 177
                    self.break_stm()
                    pass
                elif token in [BKITParser.CONTINUE]:
                    self.state = 178
                    self.continue_stm()
                    pass
                elif token in [BKITParser.ID, BKITParser.DO, BKITParser.ELSE, BKITParser.ELSEIF, BKITParser.ENDBODY, BKITParser.ENDIF, BKITParser.ENDFOR, BKITParser.ENDWHILE, BKITParser.FOR, BKITParser.IF, BKITParser.RETURN, BKITParser.WHILE]:
                    pass
                else:
                    pass
                pass
